--- a/.forgejo/workflows/container-ci.yaml
+++ b/.forgejo/workflows/container-ci.yaml
@@ -5,7 +5,7 @@ on:
 
 env:
   REGISTRY: codeberg.org
-  IMAGE_NAME: ${{ forgejo.repository }}
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-push-image:
