--- a/.forgejo/workflows/container-ci.yaml
+++ b/.forgejo/workflows/container-ci.yaml
@@ -36,8 +36,8 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=sha
-      - name: Set up QEMU
-        uses: https://github.com/docker/setup-qemu-action@v3
+      # - name: Set up QEMU
+      #   uses: https://github.com/docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: https://github.com/docker/setup-buildx-action@v3
       - name: Build and push Docker image
