--- a/.forgejo/workflows/container-ci.yaml
+++ b/.forgejo/workflows/container-ci.yaml
@@ -31,11 +31,11 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=semver,pattern={{version}}
-          # type=semver,pattern={{major}}.{{minor}}
-          # type=semver,pattern={{major}}
-          # type=ref,event=branch
-          # type=ref,event=pr
-          # type=sha
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=ref,event=branch
+            type=ref,event=pr
+            type=sha
       # - name: Set up QEMU
       #   uses: https://github.com/docker/setup-qemu-action@v3
       # - name: Set up Docker Buildx
