--- a/.forgejo/workflows/container-ci.yaml
+++ b/.forgejo/workflows/container-ci.yaml
@@ -18,12 +18,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      # - name: Log in to the Container registry
-      #   uses: https://github.com/docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
-      #   with:
-      #     registry: ${{ env.REGISTRY }}
-      #     username: ${{ github.actor }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: https://github.com/docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
@@ -36,36 +30,13 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=sha
-      # - name: Set up QEMU
-      #   uses: https://github.com/docker/setup-qemu-action@v3
-      # - name: Set up Docker Buildx
-      #   uses: https://github.com/docker/setup-buildx-action@v3
-      # - name: Build and push Docker image
-      #   id: push
-      #   uses: https://github.com/docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
-      #   with:
-      #     platforms: linux/amd64,linux/arm64
-      #     context: .
-      #     push: true
-      #     tags: ${{ steps.meta.outputs.tags }}
-      #     labels: ${{ steps.meta.outputs.labels }}
-      - uses: https://git.kabelsalat.ch/s3lph/forgejo-kaniko-action@v1
+      - name: Read Dockerfile
+        uses: https://github.com/andstor/file-reader-action/tree/master/src
         with:
-          dockerfile: |
-            FROM ruby:3.1.7 AS build
-            RUN gem install bundler jekyll
-
-            WORKDIR /build
-            COPY Gemfile .
-            COPY Gemfile.lock .
-            RUN bundle install
-
-            COPY . .
-            RUN bundle exec jekyll build
-
-            FROM nginx:alpine3.22-slim AS final
-            COPY nginx.conf /etc/nginx/conf.d/default.conf
-            COPY --from=build /build/_site /usr/share/nginx/html
+          path: Dockerfile
+      - uses: https://codeberg.org/thzinc/forgejo-kaniko-action@v2
+        with:
+          dockerfile: ${{ steps.meta.outputs.contents }}
           image: ${{ steps.meta.outputs.tags }}
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
