--- a/.forgejo/workflows/container-ci.yaml
+++ b/.forgejo/workflows/container-ci.yaml
@@ -31,19 +31,14 @@ jobs:
             type=ref,event=pr
             type=sha
       - name: Read Dockerfile
+        id: dockerfile
         uses: https://github.com/andstor/file-reader-action@v1
         with:
           path: Dockerfile
-      - uses: https://codeberg.org/thzinc/forgejo-kaniko-action@db29cb6667e4e3b189a488826f752783ce08495a
+      - uses: https://codeberg.org/thzinc/forgejo-kaniko-action@1b898021b98d92f5bbdf4ba99210c6c408c3e185
         with:
-          dockerfile: ${{ steps.meta.outputs.contents }}
+          dockerfile: ${{ steps.dockerfile.outputs.contents }}
           image: ${{ steps.meta.outputs.tags }}
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Generate artifact attestation
-        uses: https://github.com/actions/attest-build-provenance@v2
-        with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
-          subject-digest: ${{ steps.push.outputs.digest }}
-          push-to-registry: true
