--- a/.forgejo/workflows/container-ci.yaml
+++ b/.forgejo/workflows/container-ci.yaml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   build-and-push-image:
-    runs-on: codeberg-small
+    runs-on: docker
     permissions:
       contents: read
       packages: write
