--- a/.forgejo/workflows/container-ci.yaml
+++ b/.forgejo/workflows/container-ci.yaml
@@ -2,7 +2,8 @@ name: Create and publish trnzt/home
 on:
   push:
     branches: ["main"]
-
+    tags:
+      - 'v\d+\.\d+\.\d+'
 env:
   REGISTRY: codeberg.org
   IMAGE_NAME: ${{ github.repository }}
