--- a/.woodpecker/build.yaml
+++ b/.woodpecker/build.yaml
@@ -1,3 +1,8 @@
+when:
+  - event: push
+    branch:
+      - main
+      - woodpecker
 steps:
   - name: generate_docker_tags
     image: ghcr.io/dvjn/woodpecker-docker-tags-plugin
