--- a/.woodpecker/build.yaml
+++ b/.woodpecker/build.yaml
@@ -1,8 +1,6 @@
 when:
   - event: push
-    branch:
-      - main
-      - woodpecker
+    branch: main
 steps:
   - name: generate_docker_tags
     image: ghcr.io/dvjn/woodpecker-docker-tags-plugin
