(+semver: fix) Specify correct repository

--- a/.woodpecker/build.yaml
+++ b/.woodpecker/build.yaml
@@ -2,21 +2,10 @@ when:
   - event: push
     branch: main
 steps:
-  # - name: generate_docker_tags
-  #   image: ghcr.io/dvjn/woodpecker-docker-tags-plugin
-  #   settings:
-  #     tags: |
-  #       edge
-  #       pr
-  #       semver --format {{major}}
-  #       semver --format {{major}}.{{minor}}
-  #       semver --format {{version}}
-  #       cron --format nightly-%Y%m%d
-  #       sha
-  - name: build_image_plz
+  - name: build_image
     image: woodpeckerci/plugin-docker-buildx
     settings:
-      repo: trnzt/home
+      repo: codeberg.org/trnzt/home
       dockerfile: Dockerfile
       platforms: linux/amd64,linux/arm64/v8
       auto_tag: true
