--- a/.woodpecker/build.yaml
+++ b/.woodpecker/build.yaml
@@ -6,6 +6,7 @@ steps:
     image: woodpeckerci/plugin-docker-buildx
     settings:
       repo: codeberg.org/trnzt/home
+      registry: codeberg.org
       dockerfile: Dockerfile
       platforms: linux/amd64,linux/arm64/v8
       auto_tag: true
