--- a/.woodpecker/build.yaml
+++ b/.woodpecker/build.yaml
@@ -2,6 +2,12 @@ when:
   - event: push
     branch: main
 steps:
+  - name: install_jekyll
+    image: ruby:3.1.7
+    commands:
+      - gem install bundler jekyll
+      - bundle install
+      - bundle exec jekyll build
   - name: build_image
     image: woodpeckerci/plugin-docker-buildx
     settings:
