--- a/.gitea/workflows/container-ci.yaml
+++ b/.gitea/workflows/container-ci.yaml
@@ -17,11 +17,11 @@ jobs:
       attestations: write
       id-token: write
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Extract metadata (tags, labels) for Docker
+      - name: Checkout
+        uses: actions/checkout@v5
+      - name: Docker meta
         id: meta
-        uses: https://github.com/docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
@@ -31,16 +31,16 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=sha
-      - name: Read Dockerfile
-        id: dockerfile
-        uses: https://github.com/andstor/file-reader-action@v1
+      - name: Login to DockerHub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
         with:
-          path: Dockerfile
-      - name: Build image
-        uses: https://codeberg.org/thzinc/forgejo-kaniko-action@v2
-        with:
-          dockerfile: ${{ steps.dockerfile.outputs.contents }}
-          image: ${{ steps.meta.outputs.tags }}
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
+          username: ${{ secrets.PACKAGES_USERNAME }}
           password: ${{ secrets.PACKAGES_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
