--- a/.gitea/workflows/container-ci.yaml
+++ b/.gitea/workflows/container-ci.yaml
@@ -35,6 +35,7 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
+          registry: ${{ env.REGISTRY }}
           username: ${{ secrets.PACKAGES_USERNAME }}
           password: ${{ secrets.PACKAGES_TOKEN }}
       - name: Build and push
