--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  thzinc.com;
+    server_name  trnzt.com;
 
     location / {
         root   /usr/share/nginx/html;
