--- a/.gitea/workflows/container-ci.yaml
+++ b/.gitea/workflows/container-ci.yaml
@@ -16,6 +16,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+      - uses: azure/setup-helm@v4.3.0
+        with:
+          version: "v3.13.1"
+        id: install
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
@@ -55,7 +59,7 @@ jobs:
           driver-opts: |
             namespace=buildx-builders
             qemu.install=true
-      - name: Build and push
+      - name: Build and push container image
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -64,3 +68,10 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             BUILDER_REGISTRY=${{ vars.PACKAGES_REGISTRY }}
+      - name: Build Helm chart
+        run: |
+          helm package charts/trnzt-com --app-version "${{ fromJSON(steps.meta.outputs.json).['tag-names'][0] }}" --version "${{ fromJSON(steps.meta.outputs.json).['tag-names'][0] }}"
+      - name: Push Helm chart
+        run: |
+          helm push "trnzt-com-${{ fromJSON(steps.meta.outputs.json).['tag-names'][0] }}.tgz" oci://${{ vars.PACKAGES_REGISTRY }}/trnzt
+          helm push "trnzt-com-${{ fromJSON(steps.meta.outputs.json).['tag-names'][0] }}.tgz" oci://codeberg.org/trnzt
