--- a/.gitea/workflows/container-ci.yaml
+++ b/.gitea/workflows/container-ci.yaml
@@ -71,9 +71,11 @@ jobs:
       - name: Build Helm chart
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
-          helm package charts/trnzt-com --app-version "${{ fromJSON(steps.meta.outputs.json).['tag-names'][0] }}" --version "${{ fromJSON(steps.meta.outputs.json).['tag-names'][0] }}"
+          set -e
+          helm package charts/trnzt-com --app-version "${{ fromJSON(steps.meta.outputs.json).tag-names[0] }}" --version "${{ fromJSON(steps.meta.outputs.json).tag-names[0] }}"
       - name: Push Helm chart
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
-          helm push "trnzt-com-${{ fromJSON(steps.meta.outputs.json).['tag-names'][0] }}.tgz" oci://${{ vars.PACKAGES_REGISTRY }}/trnzt
-          helm push "trnzt-com-${{ fromJSON(steps.meta.outputs.json).['tag-names'][0] }}.tgz" oci://codeberg.org/trnzt
+          set -e
+          helm push "trnzt-com-${{ fromJSON(steps.meta.outputs.json).tag-names[0] }}.tgz" oci://${{ vars.PACKAGES_REGISTRY }}/trnzt
+          helm push "trnzt-com-${{ fromJSON(steps.meta.outputs.json).tag-names[0] }}.tgz" oci://codeberg.org/trnzt
